Calculate remaining battery lifetime considering all installed batteries

This is based on a patch provided by Joschi Brauchle, thanks!
It has been adjusted to PowerDevil 5 but is only used as a fallback now
since we use UPower's display device now if available

REVIEW: 116481
BUG: 253453
FIXED-IN: 5.3.0